--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
         <link rel="stylesheet" href="/17.introSectionWithDropdownNavigationMain/Style/normalize.css">
         <link rel="stylesheet" href="/17.introSectionWithDropdownNavigationMain/Style/Style.css">
-        <title>Frontend Mentor | Intro section with dropdown navigation</title>
+        <title>Frontend mentor | Intro section with dropdown navigation</title>
     </head>
 
     <body>
